<resources>
    <string name="app_name">Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_screen_title">Login</string>
    <string name="login_screen_username_hint">Email/Username</string>
    <string name="login_screen_password_hint">Password</string>

    <string name="create_account">CreateAccountFeature</string>
    <string name="not_with_us_yet">Not with us yet?</string>
    <string name="sign_up"><u>Sign Up</u>.</string>
    <string name="login">Login</string>
    <string name="title_pills_module">Pill Order/Refill</string>
    <string name="lab_reports">Lab Reports</string>
    <string name="title_lab_hub">Lab Reports Hub</string>
    <string name="title_prescriptions_hub">Prescriptions Feature Hub</string>
    <string name="my_prescriptions">My Prescriptions</string>
    <string name="title_wellnesstips_hub">Wellness Tips Hub</string>
    <string name="wellness_tips">Wellness Tips</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="suggestion_box">Suggestion Box</string>
    <string name="payment_method">Payment Method</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_login_module">Login</string>
</resources>
