<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mydemoapplication.views.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:fitsSystemWindows="true"
        tools:context=".LoginFragment">

        <View
            android:id="@+id/image_placeholder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:hint="@string/login_screen_username_hint"
            app:layout_constraintEnd_toEndOf="@id/image_placeholder"
            app:layout_constraintStart_toStartOf="@id/image_placeholder"
            app:layout_constraintTop_toBottomOf="@id/image_placeholder"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_screen_password_hint"
            android:autofillHints="@string/login_screen_password_hint"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/login_username"
            app:layout_constraintStart_toStartOf="@id/login_username"
            app:layout_constraintTop_toBottomOf="@id/login_username"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/login_password"
            app:layout_constraintStart_toStartOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/not_with_us_yet"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <TextView
            android:id="@+id/launch_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/signup_text"
            app:layout_constraintStart_toStartOf="@id/signup_text"
            app:layout_constraintTop_toBottomOf="@id/signup_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>