<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pills.login_module.views.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_placeholder"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toStartOf="@id/create_account_method_guideline_end"
            app:layout_constraintStart_toEndOf="@id/create_account_method_guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_outlined_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@id/create_account_method_guideline_end"
            app:layout_constraintStart_toEndOf="@id/create_account_method_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/image_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_username_hint"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_outlined_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout_outlined_username"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_outlined_username"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_outlined_username"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout_outlined_password"
            app:layout_constraintStart_toStartOf="@id/text_input_layout_outlined_password"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_outlined_password" />

        <TextView
            android:id="@+id/launch_create_account"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="?colorSecondary"
            app:layout_constraintEnd_toEndOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elevation="0dp"
            app:buttonSize="wide"
            app:layout_constraintEnd_toEndOf="@id/launch_create_account"
            app:layout_constraintStart_toStartOf="@id/launch_create_account"
            app:layout_constraintTop_toBottomOf="@+id/launch_create_account" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/create_account_method_guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/create_account_method_guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>